# trial_fastapi_project

./: Dockerfile  README.md  app.py  docker-compose.yml  pyproject.toml  sql_app.db
celery_app/: celery_main.py  celery_worker.py  main.py  model.py
rabbit_app/: main.py  pika_client.py  receive.py  router.py  send.py
rabbit_consumer/: Dockerfile  consumer.py
rabbit_producer/: pika_client.py  producer.py  receive.py  router.py  send.py
sql_app/: crud.py  main.py  models.py  schemas.py  sql_main.py
templates/: index.html
