[tool.poetry]
name = "trial_fast_apiproject"
version = "0.1.0"
description = ""
authors = ["Андрей Сторчак <stor-andrej@yandex.ru>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.75.0"
sqlalchemy = "1.4.32"
uvicorn = "^0.17.6"
Jinja2 = "^3.0.3"
python-multipart = "^0.0.5"
aiofiles = "^0.8.0"
pika = "^1.2.0"
aio-pika = "^7.1.2"
celery = "^5.2.3"
flower = "^1.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
